# card-vault

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  card-vault.service  env.example  import.html  import.rs  install-service.sh
data/: get_data  get_data.service  get_data.timer
migrations/: 0001_initial.sql  0002_sales_fields.sql  0003_bulk_data.sql  0004_invoice_ledger.sql  0005_item_details.sql  0006_sealed.sql  0007_uid_pool.sql  0008_shop_price.sql  0009_card_hashes.sql
mtg_shipping/: Makefile  header.ps  labeler.py  mtg-labeler.1  mtg-labeler.bash
scanner/: SCANNER.md  capture.py  hash_cards.py  recognize.py  requirements.txt  setup.bat
src/: config.rs  errors.rs  main.rs  state.rs
src/db/: bulk.rs  import.rs  mod.rs  scryfall.rs
src/models/: mod.rs
src/routes/: import.rs  individuals.rs  ingest.rs  inventory.rs  labels.rs  ledger.rs  locations.rs  market.rs  mod.rs  sales.rs  sealed.rs
templates/: base.html  import.html  individual_detail.html  individual_new.html  individuals.html  inventory.html  inventory_detail.html  labels.html  labels_print.html  ledger.html  location_detail.html  location_new.html  locations.html  market.html  qr_label.html  sales.html  sales_detail.html  sales_form.html  sales_new.html  sealed.html
