[package]
name = "card-vault"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "card-vault"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# Templating
minijinja = { version = "1", features = ["loader"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CSV parsing
csv = "1"

# Config / env
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (Scryfall price hydration)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
nanoid = "0.4"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"

[profile.release]
opt-level = 3
lto = true
